<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TwangR</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="sendBtn">Send</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="Welcome">Welcome to TwangR!</string>
    <string name="Username">Username:</string>
    <string name="Password">Password:</string>
    <string name="Register">Register</string>
    <string name="Login">Login</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="RegistrationInstruction">Please fill out the fields below and hit register to continue</string>
    <string name="ConfirmPassword">Confirm Password:</string>
    <string name="email">Email: </string>
    <string name="RealName">RealName:</string>
    <string name="NickName">Nick Name*:</string>
    <string name="NotRequired">* = Not required</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_chat">ChatActivity</string>
    <string name="PostNews">Post News</string>
    <string name="title_activity_main_activity2">MainActivity2</string>
    <string name="action_search">Search</string>
    <string name="MyTwangR_Friends">My Friends</string>
    <string name="MyTwangR_Edit">Edit Profile</string>
    <string name="title_activity_single_post">SinglePost</string>
    <string name="title_activity_add_new_post">AddNewPostActivity</string>
    <string name="title_activity_other_profile">OtherProfileActivity</string>
    <string name="Placeholder_profilename">Example Real Name</string>
    <string name="Placeholder_profilenick">(Example Nickname)</string>
    <string name="OtherProfile_AddFriend">Add Friend</string>
    <string name="OtherProfile_Message">Message</string>
    <string name="OtherProfile_RemoveFriend">Remove Friend</string>
    <string name="title_activity_friends_list">FriendsListActivity</string>
    <string name="FriendsList_RequestLabel">Friend Requests</string>
    <string name="FriendsList_FriendsLabel">My Friends</string>
    <string name="FriendsList_AcceptFriend">Accept</string>
    <string name="FriendsList_DeclineFriend">Decline</string>
    <string name="title_activity_splash">splash</string>
</resources>
