<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="net.gavinpower.twangr.Activities.OtherProfileActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/Placeholder_profilename"
        android:id="@+id/OtherProfile_Name"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="59dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/Placeholder_profilenick"
        android:id="@+id/OtherProfile_NickName"
        android:layout_below="@+id/OtherProfile_Name"
        android:layout_alignRight="@+id/OtherProfile_Name"
        android:layout_alignEnd="@+id/OtherProfile_Name" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/OtherProfile_AddFriend"
        android:layout_marginTop="56dp"
        android:text="@string/OtherProfile_AddFriend"
        android:layout_below="@+id/OtherProfile_NickName"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:onClick="sendFriendRequest" />

    <ListView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/OtherProfile_News"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/OtherProfile_AddFriend" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/OtherProfile_Message"
        android:id="@+id/OtherProfile_Message"
        android:layout_alignBottom="@+id/OtherProfile_AddFriend"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:onClick="startChat" />
</RelativeLayout>
