<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="Example Profile Name"
            android:id="@+id/profile_username"
            android:layout_marginTop="48dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_marginRight="43dp"
            android:layout_marginEnd="43dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="(Example NickName)"
            android:id="@+id/profile_nickname"
            android:layout_below="@+id/profile_username"
            android:layout_alignRight="@+id/profile_username"
            android:layout_alignEnd="@+id/profile_username" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/PostNews"
            android:id="@+id/button"
            android:layout_below="@+id/profile_nickname"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="71dp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/MyTwangR_Edit"
            android:id="@+id/button2"
            android:layout_alignTop="@+id/button"
            android:layout_centerHorizontal="true" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/MyTwangR_Friends"
            android:id="@+id/button3"
            android:layout_alignTop="@+id/button2"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />

        <ListView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/myProfileStatus"
            android:layout_below="@+id/button"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="29dp"
            android:layout_alignParentBottom="true" />

    </RelativeLayout>
</LinearLayout>